--- a/src/index.css
+++ b/src/index.css
@@ -66,8 +66,16 @@
     @apply bg-gradient-to-r text-transparent bg-clip-text from-[#42A6E3] to-[#FF56F6] font-bold font-primary hover:from-[#FF56F6] hover:to-[#42A6E3];
   }
   .section {
-    @apply py-5 lg:px-6 lg:py-16 lg:h-screen flex items-center;
+    @apply py-16 lg:py-24;
   }
+}
+
+#skills {
+  @apply mb-16;
+}
+
+#contact {
+  @apply mt-16;
 }
 
 @media (max-width: 640px) {
@@ -75,6 +83,3 @@
     display: flex !important;
   }
 }
-
-
-
